CardView para el detalle asignatura y la clase POYO de DetalleAsignatura.

--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -15,7 +15,7 @@
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true"
-        android:clickable="false">
+        android:clickable="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
