--- a/app/src/main/res/layout/fragmento_detalle_asignatura.xml
+++ b/app/src/main/res/layout/fragmento_detalle_asignatura.xml
@@ -7,12 +7,6 @@
     android:orientation="vertical"
     tools:context="layout.FragmentoDetalleAsignatura">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="50"
-        android:scaleType="centerCrop" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +21,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
+            android:text="Asignatura"
             android:textIsSelectable="true"/>
 
     </LinearLayout>
